@@ -1,3 +1,8 @@
+2004-10-10  Michael Yount <csf@moscow.com>
+
+	* lib/Mj/Deliver.pm, et al.:  Make use of the qmail path
+	specified during the installation process.
+
 2004-10-09  Michael Yount <csf@moscow.com>
 
 	* lib/Majordomo.pm:  Version number is now 0.1200410090
